# django_design_system

./: .gitignore  404.html  AI-DISCLOSURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.beads/: config.yaml  metadata.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: save_canvas_pages.py
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml
api-reference/: index.html
api/components/: index.html
api/parameters/: index.html
components/: index.html
dj_design_system/: __init__.py  apps.py  components.py  data.py  finders.py  forms.py  loaders.py  models.py  settings.py  slots.py  types.py  urls.py  views.py
dj_design_system/migrations/: 0001_initial.py
dj_design_system/parameters/: __init__.py  base.py  field.py  model.py  user.py
dj_design_system/services/: canvas.py  component.py  markdown_canvas.py  media.py  navigation.py  registry.py  slot_node.py  tag_signature.py
dj_design_system/static/dj_design_system/: gallery-highlight.css  gallery-toolbar.js  gallery.css
dj_design_system/static/django_design_system/: canvas.css  gallery-markdown.css  gallery-measure.js  gallery-search.js  gallery-toolbar.css
dj_design_system/templates/dj_design_system/canvas/: iframe.html
dj_design_system/templates/dj_design_system/gallery/: base.html  breadcrumb.html  component.html  documentation.html  folder.html  index.html  navtree.html  sandbox_fragment.html  toolbar.html
dj_design_system/templatetags/: design_components.py  dj_design_system_gallery.py
docs/: ai-disclosure.md  api-reference.md  components.md  gallery.md  index.md  organisation.md  quickstart.md  registry.md  templatetags.md
docs/api/: components.md  parameters.md
docs/assets/: docs-theme.css
example_project/: settings.py  urls.py
example_project/demo_components/: apps.py
example_project/demo_components/components/: alert.py  badge.py  rich_button.css  rich_button.py  user_card.py
example_project/demo_components/components/button/: button.css  button.html  button.js  button.py
example_project/demo_components/components/card/: abstract_card.py  info_card.py  slotted_card.css  slotted_card.py
example_project/demo_components/components/card/layouts/: hero.py
example_project/demo_extra/: apps.py
example_project/demo_extra/components/: button.py
example_project/demo_nav/: apps.py
example_project/demo_nav/components/: button.py  design_guidelines.md
example_project/demo_nav/components/cards/info_card/: info_card.py
example_project/demo_nav/components/elements/: badge.py  index.md
example_project/demo_nav/components/elements/icon/: accessibility.md  component.py  index.md
example_project/demo_nav/components/generic/: divider.py
example_project/demo_nav/components/generic/tooltip/: component.py
example_project/demo_single/: apps.py  components.py
example_project/static/example_project/: demo.css
gallery/: index.html
organisation/: index.html
quickstart/: index.html
registry/: index.html
search/: search_index.json
templatetags/: index.html
tests/: conftest.py  settings.py  test_abstract_component.py  test_canvas_service.py  test_canvas_templatetag.py  test_canvas_views.py  test_components.py  test_data.py  test_finders.py  test_forms.py  test_loaders.py  test_markdown_canvas.py  test_navigation.py  test_parameters.py  test_registry.py  test_search.py  test_settings.py  test_slots.py  test_tag_signature.py  test_templatetags.py  test_types.py  test_views.py  urls.py
tests/e2e/: conftest.py  test_gallery.py
