[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dj-design-system"
dynamic = ["version"]
description = "A Design System for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["django", "Design System", "component"]
maintainers = [
  { name = "marcelkornblum" },
  { name = "CamLamb" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Documentation",
  "Topic :: Software Development :: User Interfaces",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "License :: OSI Approved :: MIT License",
]
# Runtime dependencies: pinned only where we actively test the range.
# Other deps (markdown etc.) are intentionally unpinned so downstream
# projects can apply security updates without waiting for us.
dependencies = [
  "django>=5.2,<8",
  "markdown",
]

[project.urls]
Homepage = "https://django-design-system.github.io/django_design_system/"
Repository = "https://github.com/Django-Design-System/django_design_system"
Documentation = "https://django-design-system.github.io/django_design_system/"
"Bug Tracker" = "https://github.com/Django-Design-System/django_design_system/issues"
Changelog = "https://github.com/Django-Design-System/django_design_system/blob/main/CHANGELOG.md"

[project.optional-dependencies]
testing = [
  "coverage",
  "factory-boy",
  "playwright",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
  "pytest-playwright",
]
dev = [
  "djlint",
  "mypy",
  "ruff",
  "types-Markdown",
  "types-Pygments",
]
docs = [
  "mkdocs-material",
  "mkdocstrings-python",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["dj_design_system"]

[tool.hatch.build.targets.sdist]
include = [
  "dj_design_system/",
  "tests/",
  "example_project/",
  "docs/",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
ignore = ["B904", "E501", "N818", "S101", "S105"]

[tool.ruff.lint.per-file-ignores]
# Optional third-party import inside try/except confuses isort
"dj_design_system/services/media.py" = ["I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
exclude = [
    # TOML literal strings (single-quotes, no escaping necessary)
    '/migrations/',
    'example_project/',
    'tests/'
]
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["django.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["webpack_loader.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["dj_design_system"]
omit = [
    "dj_design_system/tests/*",
    "dj_design_system/migrations/*",
]

[tool.coverage.report]
show_missing = true
omit = [
    "dj_design_system/tests/*",
    "dj_design_system/migrations/*",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--disable-warnings --ds=tests.settings --base-url http://localhost:8003 --liveserver=localhost:8003"
DJANGO_SETTINGS_MODULE = "tests.settings"
markers = [
    "e2e: Mark the test as using Playwright.",
]

[tool.djlint]
extension = "html"
profile = "django"
ignore = "T002,H006,H017,H023"
preserve_blank_lines = true
extend_exclude = "htmlcov,staticfiles,static,node_modules"
custom_blocks = "dropdown,fragment"
